# Mystira.App

./: .aider.chat.history.md  .aider.input.history  .cspell.json  .deploy-config.ps1  .deploy-now.ps1  .dockerignore  .gitignore  .gitmodules  ACS_EMAIL_SETUP.md  CHANGES_SUMMARY.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  DEPLOY-NOW.md  DISCORD_IMPLEMENTATION_SUMMARY.md  EMAIL_CHANGES_SUMMARY.md  EMAIL_IMPLEMENTATION.md  EMAIL_INTEGRATION_README.md  IMPLEMENTATION_SUMMARY.md  Mystira.App.sln  NuGet.config  NuGet.config.template  PASSWORDLESS_SIGNUP.md  PHASE2_EMAIL_SUMMARY.md  PRODUCTION_REVIEW_REPORT_UPDATED.md  README.md  SRI_FIX_DOCUMENTATION.md  WARP.md  claude.md  codecov.yml  deploy-now.sh  devhub.bat  devhub.sh  docker-compose.yml  global.json  moodboard.html  nuget.config  renovate.json  start.ps1  staticwebapp.config.json  test-docker-build.sh
.aider.tags.cache.v4/: cache.db
.github/: copilot-instructions.md  mcp.json
.husky/: pre-commit
.mcp/: README.md  config.json
Mystira.App.CosmosConsole/: Mystira.App.CosmosConsole.csproj  Program.cs  appsettings.json
docs/: DOCKER.md  (+25 more)
tools/Mystira.DevHub/src-tauri/: Cargo.toml  REFACTORING.md
tools/Mystira.DevHub/src-tauri/icons/: icon.icns
tools/Mystira.DevHub/src-tauri/src/: cache.rs  config.rs  cosmos.rs  helpers.rs  main.rs  rate_limit.rs  retry.rs  utils.rs
tools/Mystira.DevHub/src-tauri/src/azure/: mod.rs  resources.rs
tools/Mystira.DevHub/src-tauri/src/azure/deployment/: deploy.rs  helpers.rs  mod.rs  preview.rs  validate.rs
tools/Mystira.DevHub/src-tauri/src/services/: mod.rs
(+1714 files in other folders)
